--- a/home.html
+++ b/home.html
@@ -1,1 +1,35 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Google</title>
+    <link rel="stylesheet" href="home.css" />
+  </head>
+  <body>
+    <div class="TopDiv">
+      <div class="PaddingDiv">Gmail</div>
+      <div class="PaddingDiv">Image</div>
+      <div class="PaddingDiv">Icon</div>
+      <div class="PaddingDiv">Profile</div>
+    </div>
+    <div class="MiddleDiv">
+      <div>Google</div>
+      <div>SearchBar</div>
+      <div>Button1 Button2</div>
+      <div>Language</div>
+    </div>
+    <div class="BottomDiv">
+      <div class="BottomDiv1">India</div>
+    </div>
+    <div class="BottomDiv2">
+      <div>About</div>
+      <div>Advertising</div>
+      <div>Business</div>
+      <div>How Search Works</div>
+      <div>Privacy</div>
+      <div>S</div>
+    </div>
+  </body>
+</html>
