--- a/home.html
+++ b/home.html
@@ -24,12 +24,17 @@
       <div class="BottomDiv1">India</div>
     </div>
     <div class="BottomDiv2">
-      <div>About</div>
-      <div>Advertising</div>
-      <div>Business</div>
-      <div>How Search Works</div>
-      <div>Privacy</div>
-      <div>S</div>
+      <div class="FirstDiv">
+        <div>About</div>
+        <div>Advertising</div>
+        <div>Business</div>
+        <div>How Search Works</div>
+      </div>
+      <div class="SecondDiv">
+        <div>Privacy</div>
+        <div>Terms</div>
+        <div>Setting</div>
+      </div>
     </div>
   </body>
 </html>
