--- a/home.html
+++ b/home.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="TopDiv">
-      <div class="PaddingDiv">Gmail</div>
-      <div class="PaddingDiv">Image</div>
-      <div class="PaddingDiv">Icon</div>
-      <div class="PaddingDiv">Profile</div>
+      <div class="PaddingDiv"><a href="gmail.html">Gmail</a></div>
+      <div class="PaddingDiv"><a href="images.html">Images</a></div>
+      <div class="PaddingDiv"><img src="icon.png" class="icon-img" /></div>
+      <div class="PaddingDiv"><button class="sign-btn">Sign in</button></div>
     </div>
     <div class="MiddleDiv">
       <div>Google</div>
