Completed With Border

--- a/home.html
+++ b/home.html
@@ -9,31 +9,58 @@
   </head>
   <body>
     <div class="TopDiv">
-      <div class="PaddingDiv"><a href="gmail.html">Gmail</a></div>
-      <div class="PaddingDiv"><a href="images.html">Images</a></div>
+      <div class="PaddingDiv">
+        <a href="gmail.html" class="GmailDiv">Gmail</a>
+      </div>
+      <div class="PaddingDiv">
+        <a href="images.html" class="ImagesDiv">Images</a>
+      </div>
       <div class="PaddingDiv"><img src="icon.png" class="icon-img" /></div>
       <div class="PaddingDiv"><button class="sign-btn">Sign in</button></div>
     </div>
+
     <div class="MiddleDiv">
-      <div>Google</div>
-      <div>SearchBar</div>
-      <div>Button1 Button2</div>
-      <div>Language</div>
+      <div class="LogoDiv"><img class="LogoTwoDiv" src="googlelogo.png" /></div>
+      <div>
+        <input type="text" placeholder="Type Here" class="SearchDiv" />
+      </div>
+      <div>
+        <button class="ButtonOneDiv">Google Search</button>
+        <button class="ButtonTwoDiv">I'm Feeling Lucky</button>
+      </div>
+      <div class="LanguageDiv">
+        <div class="LanguageDiv1">Google offered in:</div>
+        <div class="LanguageDiv2">
+          <div class="HindiDiv"><a href="">हिन्दी</a></div>
+          <div class="EnglishDiv"><a href="">English</a></div>
+          <div class="TamilDiv"><a href="">Tamil</a></div>
+          <div class="BengaliDiv"><a href="">Bengali</a></div>
+          <div class="MarathiDiv"><a href="">Marathi</a></div>
+          <div class="MalayalamDiv"><a href="">Malayalam</a></div>
+          <div class="TeluguDiv"><a href="">Telugu</a></div>
+          <div class="KannadaDiv"><a href="">Kannada</a></div>
+          <div class="FrenchDiv"><a href="">French</a></div>
+        </div>
+      </div>
     </div>
     <div class="BottomDiv">
       <div class="BottomDiv1">India</div>
     </div>
     <div class="BottomDiv2">
       <div class="FirstDiv">
-        <div>About</div>
-        <div>Advertising</div>
-        <div>Business</div>
-        <div>How Search Works</div>
+        <div class="AboutDiv"><a href="AboutGoogle.html">About</a></div>
+        <div class="AdvertisingDiv">
+          <a href="AdGoogle.html">Advertising</a>
+        </div>
+        <div class="BusinessDiv"><a href="Business.html">Business</a></div>
+        <div class="GoogleWorkDiv">
+          <a href="Googleworks.html">How Search Works</a>
+        </div>
       </div>
       <div class="SecondDiv">
-        <div>Privacy</div>
-        <div>Terms</div>
-        <div>Setting</div>
+        <div class="PrivacyDiv"><a href="Privacy.html">Privacy</a></div>
+        <div class="TermsDiv"><a href="Terms.html">Terms</a></div>
+        <div class="SettingDiv"><a href="Setting.html">Setting</a></div>
       </div>
     </div>
   </body>
