--- a/gmail.html
+++ b/gmail.html
@@ -4,7 +4,65 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>www.gmail.com</title>
+    <title>Create Your Google Account</title>
+    <link rel="stylesheet" href="gmailstyle.css" />
   </head>
-  <body></body>
-</html>
+  <body>
+    <div class="ParentDiv">
+
+      <div class="LeftChildDiv">
+
+        <div class="LeftChildOneDiv">
+          <div>
+            <img class="GoogleDiv" src="googlelogo.png" />
+          </div>
+          <div class="CreateDiv">Create your Google Account</div>
+          <div class="ContinueDiv">to continue to Gmail</div>
+        </div>
+
+        <div class="LeftChildTwoDiv"></div>
+
+        <div class="FirstDiv">
+          <input type="text" class="FirstnameDiv" value=" First name" />
+          <input type="text" class="LastnameDiv" value=" Last name" />
+        </div>
+
+        <div class="UserDiv">
+          <input
+            type="text"
+            class="UserNameDiv"
+            value="Username                                                 @gmail.com"
+          />
+        </div>
+
+        <div class="UserOneDiv">You can use letters,numbers & periods</div>
+
+        <div>
+          <input type="text" value=" Password" class="PasswordDiv" />
+          <input type="text" value=" Confirm" class="ConfirmDiv" />
+        </div>
+
+        <div class="PasswordDetailsDiv">
+          <div>Use 8 or more characters with a mix of letters,numbers &</div>
+          <div>symbols</div>
+        </div>
+
+        <div>
+          <input type="checkbox" class="ShowPasswordDiv" /> Show Password
+        </div>
+
+        <div class="LeftChildThreeDiv"></div>
+
+        <div class="SignInContainer">
+          <a href="SignIn.html" class="SignInDiv">Sign in instead</a>
+          <button class="NextDiv">Next</button>
+        </div>
+
+      </div>
+
+      <div class="RightChildDiv"></div>
+      <div class="ContactImageDiv">Image</div>
+      <div>One account,All of Google working for you</div>
+    </div>
+  </body>
+</html
