--- a/home.html
+++ b/home.html
@@ -32,14 +32,14 @@
         <div class="LanguageDiv1">Google offered in:</div>
         <div class="LanguageDiv2">
           <div class="HindiDiv"><a href="">हिन्दी</a></div>
-          <div class="EnglishDiv"><a href="">English</a></div>
-          <div class="TamilDiv"><a href="">Tamil</a></div>
-          <div class="BengaliDiv"><a href="">Bengali</a></div>
-          <div class="MarathiDiv"><a href="">Marathi</a></div>
-          <div class="MalayalamDiv"><a href="">Malayalam</a></div>
-          <div class="TeluguDiv"><a href="">Telugu</a></div>
-          <div class="KannadaDiv"><a href="">Kannada</a></div>
-          <div class="FrenchDiv"><a href="">French</a></div>
+          <div class="GujartiDiv"><a href="">ગુજરાતી</a></div>
+          <div class="TeluguDiv"><a href="">తెలుగు </a></div>
+          <div class="BengaliDiv"><a href="">বাংলা</a></div>
+          <div class="MarathiDiv"><a href="">मराठी </a></div>
+          <div class="KannadaDiv"><a href="">ಕನ್ನಡ </a></div>
+          <div class="TamilDiv"><a href="">தமிழ்</a></div>
+          <div class="MalayalamDiv"><a href="">മലയാളം</a></div>
+          <div class="PunjabiDiv"><a href="">ਪੰਜਾਬੀ</a></div>
         </div>
       </div>
     </div>
