Completed Without Border

--- a/gm.html
+++ b/gm.html
@@ -29,14 +29,22 @@
               />
               <input class="LastNameDiv" type="text" placeholder="Last name" />
               <input class="UserNameDiv" type="text" placeholder="Username" />
-              <!-- <div>You can use letters,numbers & periods</div> -->
-              <input class="PasswordDiv" type="text" placeholder="Password" />
-              <input class="ConfirmDiv" type="text" placeholder="Confirm" />
-              <!-- <div>
-                Use 8 or more characters with a mix of letters,numbers &
+              <div class="UserNameOneDiv">
+                You can use letters,numbers & periods
               </div>
-              <div>symbols</div> -->
-              <input type="checkbox" />
+              <input
+                class="PasswordDiv"
+                type="password"
+                placeholder="Password"
+              />
+              <input class="ConfirmDiv" type="password" placeholder="Confirm" />
+              <div class="ConfirmOneDiv">
+                Use 8 or more characters with a mix of letters,numbers & symbols
+              </div>
+              <div class="CheckBoxDiv">
+                <input class="ShowPassWordDiv" type="checkbox" />
+                <span class="ShowDiv">Show Password</span>
+              </div>
             </div>
           </div>
           <div class="LeftThirdDiv">
@@ -49,7 +57,14 @@
           </div>
         </div>
         <div class="RightParentDiv">
-          <div class="RightChildDiv"></div>
+          <div class="RightChildDiv">
+            <!-- <div class="SignDiv"> -->
+            <img class="SignLogoDiv" src="signlogo.png" />
+            <!-- </div> -->
+            <div class="ImageDetailsDiv">
+              One account,All of Google working for you.
+            </div>
+          </div>
         </div>
       </div>
     </div>
